frontend/test/should_fail/index_pattern_multiple_fromto_two_upper_bounds.grg
#using "index_multiple_model.gm"

rule i {
	n:N{multiple(Ni <= 42, Ni <= 44)};
	
	modify {
	}
}
